2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_activated): Assume the fault is
	on the stack if it is one page above or three pages below the
	stack pointer.
	(exception_handler_init): Allocate an area of address space
	EXCEPTION_STACK_SIZE bytes larges.  Fill it with pages.  Set the
	first page as the thread's exception page and the top of the area
	minus one word as the stack pointer.  Set the last word to the
	location of the exception page.
	* ia32-exception-entry.S: Include <hurd/exceptions.h>.
	(PAGESIZE): Don't define.
	(_exception_handler_entry): Rewrite to not assume that the
	exception page is at the start of the page in which the stack
	pointer is, but at the location stored in the word after the bottom
	of the stack.

	* Makefile.am (libhurd_mm_a_CCASFLAGS): New variable.

	* pager.c (ensure_stack): Change SPACE to be EXCEPTION_STACK_SIZE
	- PAGESIZE bytes large.  Write to each page.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* as.h (slot_lookup): Remove parameter type.  Update users.
	* as.c (as_init): Update user of slot_lookup_rel to be consistent
	with new API.
	(as_init): Likewise.
	(slot_lookup): Likewise.  Remove parameter type.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_alloc): If we allocate the last object in a
	folio, don't drop STORAGE_DESCS_LOCK until we've removed the folio
	from the list of folios with free objects to which it is attached.

2008-03-01  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c: Include <signal.h>.
	(exception_handler_normal): On unresolved fault, raise SIGSEGV.
	(exception_handler_activated): Likewise.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(libhurd_mm_a_CPPFLAGS): Replace use of above with
	$(USER_CPPFLAGS).
	(libhurd_mm_a_CFLAGS): New variable.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* anonymous.h: Include <hurd/exceptions.h> and <l4/thread.h>.