@@ -11,10 +11,16 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 AC_CONFIG_LINKS([
-  include/hurd/mm.h:libhurd-mm/mm.h
-  include/hurd/as.h:libhurd-mm/as.h
-  include/hurd/storage.h:libhurd-mm/storage.h
-  include/hurd/capalloc.h:libhurd-mm/capalloc.h
-  include/hurd/pager.h:libhurd-mm/pager.h
-  include/hurd/anonymous.h:libhurd-mm/anonymous.h
+  sysroot/include/hurd/mm.h:libhurd-mm/mm.h
+  sysroot/include/hurd/as.h:libhurd-mm/as.h
+  sysroot/include/hurd/storage.h:libhurd-mm/storage.h
+  sysroot/include/hurd/capalloc.h:libhurd-mm/capalloc.h
+  sysroot/include/hurd/pager.h:libhurd-mm/pager.h
+  sysroot/include/hurd/anonymous.h:libhurd-mm/anonymous.h
+])
+
+AC_CONFIG_COMMANDS_POST([
+  mkdir -p sysroot/lib libhurd-mm &&
+  ln -sf ../../libhurd-mm/libhurd-mm.a sysroot/lib/ &&
+  touch libhurd-mm/libhurd-mm.a
 ])
