@@ -1,5 +1,9 @@
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
+	Create symbolic link to package's library in `sysroot/lib/'.
+	* Makefile.am [ENABLE_TESTS]: Don't build package's library.
+
 	* sysdeps/generic/sem-timedwait.c: Don't include <error.h>.
 
 2008-05-29  Neal H. Walfield  <neal@gnu.org>
